--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ button {
 }
 
 button:hover {
-    content: ("about");
+    content:url();
 }
 
 #content {
@@ -69,12 +69,12 @@ button:hover {
 
 @media screen and (min-width: 800px) {
 body {
-    background-color: red;
+    /* background-color: red; */
     }
 }
 
 @media screen and (min-width: 1000px) {
 body {
-    background-color: blue;
+    /* background-color: blue; */
     }
 }
