--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,14 @@ body {
 
 button {
     border: 1px, var(--main-color--), solid;
-    background-color: rgba(255, 255, 255, 0);
+    background-color: white;
     margin: 5px;
     border-radius: 20px;
+    color: var(--main-color--);
+    width: 100px;
+}
+button:hover {
+    scale: 1.1;
 }
 
 button:hover {
