--- a/styles.css
+++ b/styles.css
@@ -40,9 +40,7 @@ button {
     border-radius: 20px;
     color: var(--main-color--);
     width: 100px;
-}
-button:hover {
-    scale: 1.1;
+    transition: transform 0.3s ease, filter 0.3s ease;
 }
 
 button:hover {
@@ -98,4 +96,12 @@ body {
     align-items: center;
 }
 }
+@media screen and (min-width: 850px) {
+    body {
+        /* background-color: orange; */
+    }
 
+    button:hover {
+        transform: scale(1.1);
+    }
+    }
