--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,10 @@
 
 h1 {
     color: black;
-    margin: 0;
-    font-size: 40px;
+    margin: 20px;
+    font-size: 60px;
     font-weight: 800;
+    margin-top: 50px;
 }
 
 h1:hover {
