--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,27 @@
 
 h1 {
     color: black;
-    margin: 20px;
     font-size: 60px;
     font-weight: 800;
+    margin: 0;
     margin-top: 50px;
+
 }
 
 h1:hover {
     color: var(--main-color--);
+}
+
+#title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+#subtext {
+    color: grey;
+
 }
 
 header {
@@ -55,11 +68,9 @@ button:hover {
     margin: 0 auto;
     width: 810px;
 }
-#content p {
-    margin-bottom: 20px;
-}
 
 #content p {
+    margin-bottom: 20px;
     max-width: 40ch;
     font-size: large;
     margin-right: 5px;
