--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,11 @@ a {
     font-style: italic;
 }
 
+#moremain {
+    width: 80%;
+    margin: 0,auto;
+}
+
 @media screen and (max-width: 850px) {
     body {
         /* background-color: blue; */
